# config-core

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile  mycelium.toml  rust-toolchain.toml
.githooks/: pre-push
.github/workflows/: ci.yml
src/: colour.rs  edit.rs  fmt.rs  io.rs  lib.rs  model.rs  paths.rs  roots.rs  seed.rs
