[package]
name = "config-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Shared TOML config primitives (house-style formatter + hex colour parsing) for the curator and warden apps."
repository = "https://github.com/Lockyc/config-core"

[dependencies]
thiserror = "1"
# House-style TOML formatter (see fmt.rs), embedded as a library so a consuming app can format
# its own config — no standalone taplo binary required.
taplo = "0.13"
# Atomic in-place rewrite for format_file (temp file in the same dir + rename).
tempfile = "3"
# Structural, comment-preserving TOML editing for edit::add_tab (append a tab table without
# reformatting the rest of the file).
toml_edit = "0.22"
